# WeatherForecast

./: CMakeLists.txt  config.json
lib/: CMakeLists.txt  forecast.cpp  forecast.h  handler.cpp  handler.h  interface.cpp  interface.h
